@@ -3,4 +3,4 @@ tools:
    - dirb
 
 menu_name: Directory Brute Forcing
-parallel: 0
+parallel: False
