@@ -4,4 +4,4 @@ menu_name: Nmap Scan (All TCP Ports)
 tools:
    - nmap
 
-parallel: 0
+parallel: False
