@@ -1,3 +1,8 @@
+autopwn v0.9.3 - 20150415
+
+* Added timezone info to logs
+* Modified parallel option in tool configs to booleans
+
 autopwn v0.9.2 - 20150415
 
 * Greater than and less than rules now work
